# view-invoices

./: .env.example  CLAUDE.md  pyproject.toml  start.sh
backend/: __init__.py  auth.py  config.py  main.py  user_storage.py
frontend/: index.html  nixpacks.toml  package.json
frontend/src/: App.jsx  auth.jsx  index.css
frontend/src/components/: DetailView.jsx  Login.jsx  TreeView.jsx
scripts/: migrate_bestellungen_schema.sql  test_mismatch_data.sql
